fix overflow issue

--- a/packages/ui-core/src/list/HeaderButtonRow/index.module.scss
+++ b/packages/ui-core/src/list/HeaderButtonRow/index.module.scss
@@ -8,6 +8,8 @@
   overflow: hidden;
   flex-grow: 1;
   padding-right: 0.25rem;
+  height: inherit;
+
   > div:last-child {
     margin-right: 0;
   }
